--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8">
 
        <link href="css/style.css" rel="stylesheet" type="text/css">
+	    <link rel="icon" href="/favicon.ico" type="image/x-icon">  
 
 		<script src="js/build/three.js"></script>
 		<script src="js/loaders/DDSLoader.js"></script>
