--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>SmartWorld</title>
 		<meta charset="utf-8">
 
-       <link href="css/style.css" rel="stylesheet" type="text/css">
-	    <link rel="icon" href="/favicon.ico" type="image/x-icon">  
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+	    <link rel="icon" href="favicon.ico" type="image/x-icon">  
 
 		<script src="js/build/three.js"></script>
 		<script src="js/loaders/DDSLoader.js"></script>
